Add nightly & next-nightly install

--- a/t/data/iolist.html
+++ b/t/data/iolist.html
@@ -6,6 +6,8 @@
 <a href="latest/">latest/</a>                                            14-Jan-2015 05:03                   -
 <a href="v1.0.0/">v1.0.0/</a>                                            14-Jan-2015 03:59                   -
 <a href="v1.0.1/">v1.0.1/</a>                                            14-Jan-2015 05:03                   -
+<a href="v1.0.1/">v1.0.1/</a>                                            14-Jan-2015 05:03                   -
+<a href="v3.0.0-next-nightly20150717cbec3ee19d/">v3.0.0-next-nightly20150717cbec3ee19d/</a>             17-Jul-2015 23:45                   -
 <a href="index.json">index.json</a>                                         14-Jan-2015 05:03                 441
 <a href="index.tab">index.tab</a>                                          14-Jan-2015 05:03                 284
 </pre><hr></body>
